Put elements and element content into seperate divs and offset them correctly, added another class to css to align text to the right.

--- a/src/main/web-app/css/index.css
+++ b/src/main/web-app/css/index.css
@@ -29,3 +29,7 @@
 {
 	margin-top: 20px;
 }
+.texta{
+	text-align:right;
+	padding
+}
